# F1-Prediction-Model

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NEWS.rst  Project_Manual.md  README.md  RUNBOOK.md  pyproject.toml
app/: main.py
changelog.d/: README.md
docs/: ARCHITECTURE_NOTES.md  CODE_STYLE.md  ERROR_HANDLING.md  changelog.md
scripts/: release.sh
spec/: decisions.md  requirements.yml
tests/: conftest.py  test_health.py  test_smoke.py
tests/fixtures/: db.py  factories.py  http.py  snapshot.py
tests/integration/: test_db_engine_fixture.py  test_db_session_fixture.py  test_http_client_helper.py
tests/integration/ops/: test_release_integration.py
tests/unit/: test_artifact_temp_dir_fixture.py  test_factories_part1.py  test_factories_part2.py  test_fixed_now_fixture.py  test_pytest_config.py  test_smoke.py  test_snapshot_assertion_helper.py
tests/unit/ops/: test_release_script.py
