[project]
name = "f1-prediction-model"
version = "0.1.0"
description = "Starter API for an F1 prediction model project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
